@@ -1145,6 +1145,20 @@ a.view:visited, a.view:hover {
 
 /************ Misc *********/
 
+.plus-sign, .plus-sign:hover{
+   cursor: pointer;
+   color: #40c13f;
+   font-size: 14px;
+   margin-right: 5px;
+}
+
+.minus-sign, .minus-sign:hover{
+   cursor: pointer;
+   color: #e34647;
+   font-size: 14px;
+   margin-right: 5px;
+}
+
 .warning {
    color: #E93F33;
 }
