@@ -122,7 +122,7 @@
                     <div class="tab-content">
                         <div id="carrier-contacts" class="tab-pane fade in active tabs-info">
 
-                            <button id="search" href="carrier-contact-search.html" class="btn carrier-btn pull-right btn-table"> Search</button>
+                            <a id="search" href="carrier-contact-search.html" class="btn carrier-btn pull-right btn-table"> Search</a>
 
                             <div class="panel-body">
                                 <div class="portal-tables">
@@ -346,7 +346,7 @@
 
                         <div id="agreements" class="tab-pane fade in tabs-info">
 
-                            <button id="agreement-search" href="agreement-search.html" class="btn carrier-btn pull-right btn-table"> Search</button>
+                            <a id="agreement-search" href="agreement-search.html" class="btn carrier-btn pull-right btn-table"> Search</a>
                             <div class="portal-tables">
                                 <table class="table-hover table-striped table-condensed cf no-border">
                                     <thead class="cf">
