@@ -1,3 +1,6 @@
+## 2017-10-27
+• Added branches on edit agreements
+
 ## 2017-10-10
 • Added agreements tab on dashboard
 
